# Mesmer3.0

./: .gitignore  Build.sh  ChangeLog  README  ToDo  defaults.xml  librarymols.xml  mesmer1.xsl  mesmer2.xsl  mesmerDiag.xsl  popDiag.xsl  punch.xsl  punchout.bat  switchcontent.xsl
Client/: README (2).txt  README.txt  build.xml
Documentation/: Adding a molecule to the library.html  Constructing a Datafile from Gaussian output.html  Procedure_to_configure_MESMER_under_XCode.doc  Video tutorial plan of MESMER.doc
MesmerQA/: QA.bat  QA.sh
Windows VC10/: MESMER.sln  Mesmer150511(1).vsp  Mesmer150511(2).vsp  Mesmer150511(3).vsp  Mesmer150511.vsp
Windows VC9/: MESMER.sln
examples/: Examples.bat  Examples.sh  MesmerTemplate.text  makedata.bat
mesmer.xcodeproj/: project.pbxproj
qd/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  configure  configure.ac  qd-config.in
qd/fortran/: Makefile.am  Makefile.in  Makefile.sample  ddmod.f  f_dd.cpp  f_qd.cpp  qdmod.f
schemas/: CMLforMesmer.xsd  mesmer.xsd  mesmerPlugins.xsd  schemaNotes.txt
sketchup/: MESMER_USER_README  mesmer_data.rb
src/: AssignMolTypes - 副本.cpp  AssociationReaction - 副本.cpp  AssociationReaction - 副本.h  BimolecularSinkReaction - 副本.cpp  BimolecularSinkReaction - 副本.h  CollisionOperator.cpp  CollisionOperator.h  Constants.h  Crossing.h  DensityOfStates - 副本.h  DensityOfStates.cpp  DensityOfStates.h  Distribution.h  EnergyTransferModel - 副本.h  IrreversibleExchangeReaction - 副本.cpp  IrreversibleExchangeReaction - 副本.h  IrreversibleUnimolecularReaction - 副本.h  IrreversibleUnimolecularReaction.cpp  IrreversibleUnimolecularReaction.h  IsomerizationReaction - 副本.h  (+63 more)
(+244 files in other folders)
